@@ -27,6 +27,7 @@ Current Release
 - Improved error of config file not found.
 - Fixed config file missing error.
 - Removed server name constant from roster client lib.
+- Made ListRecords in cli_record_lib use record_args_dict. Updated unittest.
 
 2009-09-23 release-0.5
 - Made trunk install as version 0.1
